# fscl-xfish-c

./: README.md  meson.build
code/include/fossil/: xfish.h
code/include/fossil/xfish/: anomaly.h  jellyfish.h  ner.h  nlg.h  nlp.h  nlu.h
code/source/: anomaly.c  jellyfish.c  meson.build  module.c  ner.c  nlg.c  nlp.c  nlu.c
test/: meson.build  xtest_anomaly.c  xtest_cases.c  xtest_jellyfish.c  xtest_ner.c  xtest_nlg.c  xtest_nlp.c  xtest_nlu.c  xunit_runner.c
